2004-09-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/Makefile.in: Updated (thanks to Badlop)

2004-09-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/aclocal.m4: Better expat and openssl detection (thanks to
	Anton Vanin)

	* src/**/Makefile.in: Updated (thanks to Anton Vanin)
	* src/configure.ac: Likewise

2004-09-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.hrl: Added namespace for iq-register stream feature
	* src/ejabberd_c2s.erl: Send iq-register feature

	* src/ejabberd_config.erl: Config file can be configured via
	environment variable (thanks to Mickael Remond)

	* src/web/ejabberd_http.erl: Added SSL support (thanks to Sergei
	Golovan)

	* src/msgs/*.msg: Updated (thanks to Sergei Golovan)

	* src/jlib.hrl: Updated error codes (thanks to Sergei Golovan)
	* src/ejabberd_c2s.erl: Likewise

2004-09-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Send password in room invitation
	(thanks to Sergei Golovan)

	* src/mod_disco.erl: Added registration of sm features and nodes
	(thanks to Sergei Golovan)
	* src/mod_vcard.erl: Register vcard-temp feature (thanks to Sergei
	Golovan)

	* src/jlib.erl: Added functions now_to_utc_string/1,
	now_to_local_string/1, and datetime_string_to_timestamp/1 (thanks
	to Sergei Golovan)
	* src/mod_muc/mod_muc_room.erl: Use time parsing functions from
	jlib (thanks to Sergei Golovan)

2004-09-16  Alexey Shchepin  <alexey@sevcom.net>

	* ejabberd/src/mod_pubsub/mod_pubsub.erl: Bugfix (thanks to
	Mickael Remond)

2004-09-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Bugfix

2004-09-10  Alexey Shchepin  <alexey@sevcom.net>

	* tools/ejabberdctl: Added call to "exec" (thanks to Sergei
	Golovan)

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)

	* src/mod_vcard.erl: Support for searching of prefix substring and
	limiting of result items (thanks to Sergei Golovan)

	* src/mod_offline.erl: Support for message expiration (JEP-0023)
	(thanks to Sergei Golovan)