@@ -1,3 +1,7 @@
+2004-09-29  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/web/ejabberd_http.erl: Bugfix
+
 2004-09-27  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/Makefile.in: Updated (thanks to Badlop)
